kotlin/semlang-parser/src/test/semlang/validatorTests/fail/inlineFunction3.sem

function doStuff(i: Integer): Integer {
  // Explicit return type is incorrect
  let myFunction = function(a: Integer): Natural {
    Integer.plus(a, Integer."1")
  }
  myFunction(i)
}